main.css
/* ... */
@import url("https://fonts.googleapis.com/css2?family=Jura&display=swap");

.blank {
  height: 100px;
}

nav.navbar {
  background-color: #131a21;
  position: absolue;
  top: 0;
  width: 100vw;
  padding-top: 10px;
  padding-bottom: 5px;
}

div.container {
  display: block;
  align-items: center;
}

.navLogo {
  margin-left: 20px;
  float: left;
  width: 25px;
  height: 25px;
}

ul.navList {
  font-family: Blender Pro;
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

li.navLink {
  float: left;
  font-size: 20px;
}

li.navLink a {
  display: block;
  color: #d6d7db;
  text-align: center;
  margin: 0px 50px;
  padding: 0px 5px;
  padding-bottom: 1px;
  text-decoration: none;
}

li.navLink a:hover {
  color: white;
}

li.navLink a.active {
  color: white;
}

li.navLink a {
  position: relative;
  text-decoration: none;
}

li.navLink a:hover::before {
  transform: scaleX(1);
}

li.navLink a::before {
  content: "";
  position: absolute;
  display: block;
  width: 100%;
  height: 1px;
  bottom: 0;
  left: 0;
  background-color: white;
  transform: scaleX(0);
  transition: transform 0.3s ease;
}

html,
body {
  width: 100%;
  height: 100%;
  margin: 0px;
  padding: 0px;
}

body {
  font-family: Eurostile;
  background-image: url("Media/Images/BgGrid.png");
  background-repeat: repeat;
  background-color: #041318;
}

::-webkit-scrollbar {
  display: none;
}

.banner {
  height: 500px;
  background-color: #0b0f13;
}

.bannerImage {
  height: 100%;
  width: 100%;
  opacity: 10%;
  z-index: 1;
  background-size: contain;
}

h1 {
  font-family: Blender Pro;
  color: #96e2ee;
  padding-top: 100px;
  padding-bottom: 250px;
  position: absolute;
}

.welcome {
  animation-name: welcome;
  animation-duration: 1.2s;
  animation-fill-mode: forwards;
  font-size: 50px;
  top: 20px;
  z-index: 2;
}

.fa-angles-right {
  font-size: 20px;
  color: #96e2ee;
}

.welcomeMore {
  text-decoration: none;
  font-size: 20px;
  color: #96e2ee;
}

@keyframes welcome {
  from {
    left: 10%;
    opacity: 0;
  }

  to {
    left: 20%;
    opacity: 1;
  }
}

div.logoBanner {
  position: sticky;
  top: 0;
  height: 30px;
  width: 775px;
  margin-left: auto;
  margin-right: auto;
  opacity: 80%;
  z-index: 1;
}

div.logo {
  position: relative;
  top: 0;
  width: 20vw;
  height: 60px;
  margin-left: auto;
  margin-right: auto;
  z-index: 2;
}

.productHeadingContainer {
  margin: 0 auto;
  max-width: 1376px;
  padding: 0 15px 6px;
  position: relative;
  margin-top: 100px;
}

.productHeading {
  border-bottom: #96e2ee 1px solid;
  width: 700px;
  font-size: 35px;
  font-family: Blender Pro;
  color: #96e2ee;
  margin: 0 0 0px;
  padding-bottom: 10px;
  z-index: 1;
  text-align: left;
}

.productHeading::after {
  background-image: url(Media/Images/underline.png);
  bottom: 0;
  content: "";
  height: 7px;
  left: 0;
  position: absolute;
  width: 116px;
  z-index: 2;
}

.gallery {
  list-style: none;
  height: 1000px;
  color: #96e2ee;
  margin-top: 100px;
  padding-right: 40px;
}

.galleryContainer {
  margin-left: 100px;
  margin-right: 100px;
}

.storeLink {
  text-decoration: none;
}

.gallery1 {
  list-style: none;
}

.gallery1Container {
  position: relative;
  font-family: "Jura", sans-serif;
  background-image: url(Media/Images/ship\ preview.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-color: #1a232c !important;
  height: 400px;
  width: 600px;
  margin: -50px 10px;
  border: 1px solid #96e2ee2f !important;
}

.gallery1Container::before {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: #1a232cda;
}

.galleryHeading {
  position: relative;
  margin-left: auto;
  margin-right: auto;
  width: fit-content;
  padding: 0;
}

.gallery2 {
  list-style: none;
}

.gallery2Container {
  position: relative;
  font-family: "Jura", sans-serif;
  background-image: url(Media/Images/software\ preview.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-color: #1a232c !important;
  height: 400px;
  width: 600px;
  margin: -50px 10px;
  margin-left: auto;
  border: 1px solid #96e2ee2f !important;
}

.gallery2Container::before {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: #1a232cda;
}

.gallery3 {
  list-style: none;
}

.gallery3Container {
  position: relative;
  font-family: "Jura", sans-serif;
  background-image: url(Media/Images/tech\ preveiw.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-color: #1a232c !important;
  height: 400px;
  width: 600px;
  margin: -50px 10px;
  border: 1px solid #96e2ee2f !important;
}

.gallery3Container::before {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: #1a232cda;
}

section {
  margin-top: 200px;
}

.newsHeadingContainer {
  margin: 0 auto;
  max-width: 1376px;
  padding: 0 15px 6px;
  position: relative;
}

.newsHeading {
  border-bottom: #96e2ee 1px solid;
  width: 700px;
  font-size: 35px;
  font-family: Blender Pro;
  color: #96e2ee;
  margin: 0 0 0px;
  padding-bottom: 10px;
  z-index: 1;
}

.newsHeading::after {
  background-image: url(Media/Images/underline.png);
  bottom: 0;
  content: "";
  height: 7px;
  left: 0;
  position: absolute;
  width: 116px;
  z-index: 2;
}

.newsList {
  color: #96e2ee;
  width: auto;
  display: flex;
  padding-left: 7%;
  padding-right: 7%;
}

.newsLink {
  color: #96e2ee;
  text-decoration: none;
}

.newsLink:hover {
  text-decoration: none;
}

.newsContainer {
  font-family: "Jura", sans-serif;
  background-color: #1a232c !important;
  height: 400px;
  width: 50vw;
  margin: 0 10px;
  border: 1px solid #96e2ee2f !important;
}

.newsTitle {
  font-size: 30px;
  margin-left: 20px;
  margin-right: 30px;
  border-bottom: 2px #96e2ee solid;
  text-align: left;
}

.newsDate {
  font-size: 18px;
  margin-top: 5px;
  margin-bottom: 90px;
  margin-left: 160px;
}
/* ... */

